--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,16 +7,16 @@
 html {
     overflow-x: hidden;
     font-size: 18px;
+    scroll-behavior: smooth;
 }
 body {
     overflow-x: hidden;
 }
 .button {
     color: #8EAAD0;
-    padding-bottom: 2px;
-    font-size: 1em;
     background: black;
-    padding: 20px 30px;
+    padding: 15px 30px;
+    font-size: 1em;
     transition-duration: 400ms;
     &:hover {
         background: #2b4c7d;
@@ -32,8 +32,10 @@ body {
     transition-duration: 1s;
     transition-timing-function: cubic-bezier(0.08, 0.35, 0.16, 1.02);
     pointer-events: none;
+    z-index: 101;
 }
 #header {
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
@@ -80,33 +82,101 @@ body {
     color: black;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    background: linear-gradient(to top left, #6D819B, #8EAAD0);
+    align-items: center;
+    flex-direction: row;
+    background: linear-gradient(to right, #6D819B, #89a4c9);
     box-sizing: border-box;
-    padding-left: 12.5vw;
+    padding-left: 0 12.5vw;
     .text {
         display: flex;
         justify-content: center;
         align-items: flex-start;
         flex-direction: column;
+        h3, h2 {
+            width: calc((100vw / 8) * 3);
+        }
+        h3 {
+            font-size: 2em;
+            font-weight: 400;
+            line-height: 1;
+            margin-bottom: 40px;
+        }
+        h2 {
+            font-size: 5em;
+            line-height: 1;
+            font-weight: 600;
+            margin-bottom: 40px;
+        }
     }
-    h3, h2 {
-        width: calc((100vw / 8) * 3);
-    }
-    h3 {
-        font-size: 2em;
-        font-weight: 400;
-        line-height: 1;
-        margin-bottom: 40px;
-    }
-    h2 {
-        font-size: 5em;
-        line-height: 1;
-        font-weight: 600;
-        margin-bottom: 40px;
+    .img {
+        height: 25vw;
+        width: 25vw;
+        border-radius: 50%;
+        background: linear-gradient(to top right, #f5c9d2, #d4999e);
+        margin-left: 12.5vw;
     }
 }
-section {
-    height: 100vh;
+.hr {
+    width: 60px;
+    height: 2px;
+    background: #89a4c9;
+    margin: 20px 0;
+}
+#about {
+    width: 100%;
+    padding: 100px 12.5vw;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    .img {
+        height: 25vw;
+        width: 25vw;
+        border-radius: 50%;
+        background: linear-gradient(to top right, #f5c9d2, #d4999e);
+        margin-right: 12.5vw;
+    }
+    .text {
+        width: 37.5vw;
+        h3 {
+            font-size: 3em;
+            line-height: 1;
+        }
+        p {
+            font-size: 1em;
+            line-height: 1.618;
+        }
+    }
+}
+#schedule {
+    width: 100%;
+    padding: 100px 12.5vw;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #d2ddec;
+    .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50vw;
+        h3 {
+            font-size: 6em;
+            line-height: 1;
+            text-align: center;
+        }
+        p {
+            font-size: 1em;
+            line-height: 1.618;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        a {
+            color: white;
+        }
+    }
 }
