--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'din-2014', sans-serif;
+    font-family: MessinaSans, serif;
     text-decoration: none;
 }
 html {
@@ -50,7 +50,7 @@ body {
     transition-duration: 400ms;
     .logo {
         height: 40px;
-        padding: 20px;
+        padding: 40px;
         transition-duration: 400ms;
         img {
             height: 40px;
@@ -63,7 +63,7 @@ body {
         align-items: center;
         width: 180px;
         height: 18px;
-        padding: 31px 40px;
+        padding: 51px;
         transition-duration: 400ms;
         a {
             font-size: 1em;
@@ -77,21 +77,21 @@ body {
     }
 }
 .hero {
-    height: 100vh;
-    width: 100%;
     color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    background: linear-gradient(to right, #6D819B, #89a4c9);
-    box-sizing: border-box;
-    padding-left: 0 12.5vw;
     .text {
         display: flex;
         justify-content: center;
         align-items: flex-start;
         flex-direction: column;
+        width: 50%;
+        box-sizing: border-box;
+        padding-left: 12.5vw;
+        height: 100vh;
+        background: linear-gradient(to right, #6D819B, #89a4c9);
         h3, h2 {
             width: calc((100vw / 8) * 3);
         }
@@ -109,11 +109,9 @@ body {
         }
     }
     .img {
-        height: 25vw;
-        width: 25vw;
-        border-radius: 50%;
+        height: 100vh;
+        width: 50%;
         background: linear-gradient(to top right, #f5c9d2, #d4999e);
-        margin-left: 12.5vw;
     }
 }
 .hr {
