--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
   overflow-x: hidden;
   font-size: 18px;
   scroll-behavior: smooth;
+  background: #fff7e3;
 }
 
 body {
@@ -17,16 +18,10 @@ body {
 
 .button {
   color: black;
-  border: 1px solid black;
-  padding: 15px 35px;
+  padding: 17px 40px;
   font-size: 1em;
   -webkit-transition-duration: 400ms;
           transition-duration: 400ms;
-}
-
-.button:hover {
-  background: black;
-  color: white;
 }
 
 #cursor {
@@ -103,82 +98,35 @@ body {
   font-size: 1em;
   color: black;
   line-height: 1;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  padding-bottom: 2px;
+}
+
+#header ul a:hover {
+  border-bottom: 2px solid #000;
+}
+
+#header ul a:last-child {
   margin-left: 60px;
-}
-
-.hero {
-  color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.hero .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 50%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 60px;
-  height: 100vh;
-}
-
-.hero .text h2 {
-  width: calc((100vw / 8) * 3);
-  font-size: 5em;
-  line-height: 1.15;
-  font-weight: 600;
-  margin-bottom: 60px;
-}
-
-.hero .text p {
-  margin-bottom: 60px;
-  max-width: 600px;
-  font-size: 1em;
-  line-height: 1.618;
-}
-
-.hero .img {
-  height: 100vh;
-  width: 50%;
-  background: url(../img/march.jpg);
-  background-size: cover;
-  background-position: center center;
 }
 
 .hr {
   width: 60px;
   height: 2px;
-  background: #89a4c9;
+  background: #f47631;
   margin: 20px 0;
+  padding: 0;
 }
 
-#about {
-  width: 100%;
-  padding: 100px 12.5vw;
+footer {
+  width: 100vw;
+  background: black;
+  height: 100px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding: 0 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,85 +134,89 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-#about .img {
-  height: 25vw;
-  width: 25vw;
-  border-radius: 50%;
-  background: -webkit-gradient(linear, left bottom, right top, from(#f5c9d2), to(#d4999e));
-  background: linear-gradient(to top right, #f5c9d2, #d4999e);
-  margin-right: 12.5vw;
+footer p, footer a {
+  color: #fff7e3;
 }
 
-#about .text {
-  width: 37.5vw;
+footer a {
+  text-decoration: underline;
 }
 
-#about .text h3 {
-  font-size: 3em;
-  line-height: 1;
+#top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  z-index: 1;
+  color: black;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  opacity: 0;
 }
 
-#about .text p {
-  font-size: 1em;
-  line-height: 1.618;
+#top:hover {
+  border-bottom: 2px solid #000;
 }
 
-#schedule {
-  width: 100%;
-  padding: 100px 12.5vw;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #d2ddec;
+@media screen and (max-width: 1150px) {
+  #header {
+    width: 100%;
+    height: 100px;
+    padding: 0 30px;
+  }
 }
 
-#schedule .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50vw;
+@media screen and (max-width: 800px) {
+  footer {
+    width: 100vw;
+    background: black;
+    height: auto;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  footer p {
+    line-height: 1.5;
+  }
 }
 
-#schedule .text h3 {
-  font-size: 6em;
-  line-height: 1;
-  text-align: center;
-}
-
-#schedule .text p {
-  font-size: 1em;
-  line-height: 1.618;
-  text-align: center;
-  margin-bottom: 40px;
+@media screen and (max-width: 500px) {
+  #header .logo {
+    height: 30px;
+  }
+  #header .logo img {
+    height: 30px;
+  }
+  #header ul a {
+    font-size: .8em;
+  }
+  #header ul a:last-child {
+    margin-left: 30px;
+  }
+  #top {
+    font-size: .8em;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
